--- a/src/Microsoft.VisualStudio.Editors/PropPages/xlf/compileproppage2.de.xlf
+++ b/src/Microsoft.VisualStudio.Editors/PropPages/xlf/compileproppage2.de.xlf
@@ -22,6 +22,11 @@
         <target state="translated">Alle Warnungen deakt&amp;ivieren</target>
         <note />
       </trans-unit>
+      <trans-unit id="PreferNativeArm64CheckBox.Text">
+        <source>&amp;Prefer native ARM64</source>
+        <target state="new">&amp;Prefer native ARM64</target>
+        <note />
+      </trans-unit>
       <trans-unit id="WarningsAsErrorCheckBox.Text">
         <source>Treat a&amp;ll warnings as errors</source>
         <target state="translated">A&amp;lle Warnungen als Fehler behandeln</target>
