--- a/src/Microsoft.VisualStudio.Editors/PropPages/xlf/compileproppage2.pl.xlf
+++ b/src/Microsoft.VisualStudio.Editors/PropPages/xlf/compileproppage2.pl.xlf
@@ -22,6 +22,11 @@
         <target state="translated">W&amp;yłącz wszystkie ostrzeżenia</target>
         <note />
       </trans-unit>
+      <trans-unit id="PreferNativeArm64CheckBox.Text">
+        <source>&amp;Prefer native ARM64</source>
+        <target state="new">&amp;Prefer native ARM64</target>
+        <note />
+      </trans-unit>
       <trans-unit id="WarningsAsErrorCheckBox.Text">
         <source>Treat a&amp;ll warnings as errors</source>
         <target state="translated">Traktuj &amp;wszystkie ostrzeżenia jako błędy</target>
