--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/xlf/BuildPropertyPage.FSharp.xaml.de.xlf
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/Rules/PropertyPages/xlf/BuildPropertyPage.FSharp.xaml.de.xlf
@@ -67,6 +67,16 @@
         <target state="translated">Debugtyp</target>
         <note />
       </trans-unit>
+      <trans-unit id="EnumProperty|WarningLevel|Description">
+        <source>Specifies the level to display for compiler warnings. Higher levels produce more warnings, and include all warnings from lower levels.</source>
+        <target state="new">Specifies the level to display for compiler warnings. Higher levels produce more warnings, and include all warnings from lower levels.</target>
+        <note />
+      </trans-unit>
+      <trans-unit id="EnumProperty|WarningLevel|DisplayName">
+        <source>Warning level</source>
+        <target state="new">Warning level</target>
+        <note />
+      </trans-unit>
       <trans-unit id="EnumValue|DebugType.embedded|DisplayName">
         <source>Embedded in DLL/EXE, portable across platforms</source>
         <target state="translated">Eingebettet in DLL/EXE, plattformübergreifend portierbar</target>
@@ -85,6 +95,36 @@
       <trans-unit id="EnumValue|DebugType.portable|DisplayName">
         <source>PDB file, portable across platforms</source>
         <target state="translated">PDB-Datei, plattformübergreifend portierbar</target>
+        <note />
+      </trans-unit>
+      <trans-unit id="EnumValue|WarningLevel.0|DisplayName">
+        <source>0 - Fewest warnings, including most severe issues</source>
+        <target state="new">0 - Fewest warnings, including most severe issues</target>
+        <note />
+      </trans-unit>
+      <trans-unit id="EnumValue|WarningLevel.1|DisplayName">
+        <source>1</source>
+        <target state="new">1</target>
+        <note />
+      </trans-unit>
+      <trans-unit id="EnumValue|WarningLevel.2|DisplayName">
+        <source>2</source>
+        <target state="new">2</target>
+        <note />
+      </trans-unit>
+      <trans-unit id="EnumValue|WarningLevel.3|DisplayName">
+        <source>3 - Default warning level</source>
+        <target state="new">3 - Default warning level</target>
+        <note />
+      </trans-unit>
+      <trans-unit id="EnumValue|WarningLevel.4|DisplayName">
+        <source>4</source>
+        <target state="new">4</target>
+        <note />
+      </trans-unit>
+      <trans-unit id="EnumValue|WarningLevel.5|DisplayName">
+        <source>5 - Most warnings, including less severe issues</source>
+        <target state="new">5 - Most warnings, including less severe issues</target>
         <note />
       </trans-unit>
       <trans-unit id="StringProperty|OtherFlags|Description">
